--- a/css/loginAndPost.css
+++ b/css/loginAndPost.css
@@ -8,7 +8,7 @@ form{
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    height: 100vh;
+    padding-bottom: 5em;
 }
 
 fieldset{
